<resources>
    <string name="app_name">BottomSheet Sample</string>
    <string name="share">Share</string>
    <string name="list_button">List</string>
    <string name="grid_button">Grid</string>
    <string name="intent_picker">Intent Picker</string>
    <string name="menu_resource">Inflating a Menu</string>
    <string name="document">Document</string>
    <string name="spreadsheet">Spreadsheet</string>
    <string name="folder">Folder</string>
    <string name="upload_photos">Upload photos or videos</string>
    <string name="use_camera">Use camera</string>
    <string name="share_some_text">Share some text!</string>
    <string name="image_picker">Image picker</string>
    <string name="show">Show</string>
<<<<<<< HEAD
    <string name="recycler">Recycler</string>
    <string name="recycler_grid">Recycler Grid</string>
    <string name="recycler_linear">Recycler Linear</string>
=======
    <string name="reopen">Reopen as other type</string>
>>>>>>> trunk/master
</resources>
